[workspace]
resolver = "2"

members = [
    "linkup-cli",
    "linkup",
    "linkup-clients",
    "worker",
    "local-server",
    "server-tests",
    "cloudflare",
]

[workspace.package]
version = "3.5.0"

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
axum = { version = "0.8.1", default-features = false }
base64 = "0.22.1"
futures = "0.3.31"
hex = "0.4.3"
http = "1.2.0"
rand = "0.10.0"
regex = "1.11.1"
reqwest = { version = "0.13.2", default-features = false }
serde = "1.0.217"
serde_json = "1.0.138"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = "1.49.0"
tokio-tungstenite = "0.28.0"
url = { version = "2.5.4", features = ["serde"] }

linkup = { path = "linkup" }
linkup-clients = { path = "linkup-clients" }
linkup-local-server = { path = "local-server" }
cloudflare = { path = "cloudflare", default-features = false }
