[workspace]
resolver = "2"

members = [
    "linkup-cli",
    "linkup",
    "linkup-clients",
    "worker",
    "local-server",
    "server-tests",
    "cloudflare",
]

[workspace.package]
version = "3.5.0"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.86"
axum = { version = "0.8.9", default-features = false }
base64 = "0.22.1"
futures = "0.3.32"
hex = "0.4.3"
http = "1.4.0"
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false }
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = "1.52.1"
tokio-tungstenite = "0.29.0"
url = { version = "2.5.8", features = ["serde"] }

linkup = { path = "linkup" }
linkup-clients = { path = "linkup-clients" }
linkup-local-server = { path = "local-server" }
cloudflare = { path = "cloudflare", default-features = false }
