[workspace]
resolver = "2"

members = [
    "linkup-cli",
    "linkup",
    "linkup-clients",
    "worker",
    "local-server",
    "server-tests",
    "cloudflare",
]

[workspace.package]
version = "4.0.0"
repository = "https://github.com/mentimeter/linkup"

# Config for 'dist' (https://opensource.axo.dev/cargo-dist/).
# Run `dist generate` after editing.
[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
installers = ["shell", "homebrew"]
targets = [
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
]
unix-archive = ".tar.gz"
# Publish a Homebrew formula but skip crates.io
publish-jobs = ["homebrew"]
# Skip building on PRs by default. Only run on tag pushes.
pr-run-mode = "skip"
# Where to publish a homebrew formula tap
tap = "mentimeter/homebrew-mentimeter"
formula = "linkup"

[workspace.metadata.dist.github-custom-runners]
x86_64-apple-darwin = "depot-macos-14"
aarch64-apple-darwin = "depot-macos-14"
x86_64-unknown-linux-gnu = "depot-ubuntu-22.04-8"
aarch64-unknown-linux-gnu = "depot-ubuntu-22.04-arm-8"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.86"
axum = { version = "0.8.9", default-features = false }
base64 = "0.22.1"
futures = "0.3.32"
hex = "0.4.3"
http = "1.4.0"
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = "1.52.3"
tokio-tungstenite = "0.29.0"
url = { version = "2.5.8", features = ["serde"] }

linkup = { path = "linkup" }
linkup-clients = { path = "linkup-clients" }
linkup-local-server = { path = "local-server" }
cloudflare = { path = "cloudflare", default-features = false }
