[package]
name = "linkup-cli"
version = "3.5.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "linkup"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.27", features = ["derive", "cargo"] }
clap_complete = "4.5.42"
cloudflare = { workspace = true, features = [
    "rustls-tls",
] }
colored = "3.0.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
hickory-resolver = { version = "0.25.2", features = ["tokio"] }
linkup = { workspace = true }
linkup-clients = { workspace = true }
linkup-local-server = { workspace = true }
log = "0.4.25"
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "multipart",
    "blocking",
    "rustls",
    "query",
] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34-deprecated"
tokio = { workspace = true, features = ["macros"] }
thiserror = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
env_logger = "0.11.6"
crossterm = "0.29.0"
sysinfo = "0.38.2"
sha2 = { workspace = true }
hex = { workspace = true }
tar = "0.4.43"
flate2 = "1.0.35"
indicatif = "0.18.4"

[dev-dependencies]
mockall = "0.14.0"
mockito = "1.6.1"

[features]
default = []
