[package]
name = "linkup-cli"
version.workspace = true
edition = "2024"
build = "build.rs"

[[bin]]
name = "linkup"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
cloudflare = { workspace = true, features = ["rustls-tls"] }
hex = { workspace = true }
linkup = { workspace = true }
linkup-clients = { workspace = true }
linkup-local-server = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "multipart",
    "blocking",
    "rustls",
    "query",
] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
url = { workspace = true }

clap = { version = "4.5.27", features = ["derive", "cargo"] }
clap_complete = "4.5.42"
colored = "3.0.0"
crossterm = "0.29.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
env_logger = "0.11.6"
flate2 = "1.0.35"
hickory-resolver = { version = "0.26.0", features = ["tokio"] }
indicatif = "0.18.4"
log = "0.4.25"
serde_yaml = "0.9.34-deprecated"
sysinfo = "0.38.2"
tar = "0.4.43"

[dev-dependencies]
mockall = "0.14.0"
mockito = "1.6.1"

[features]
default = []
