[package]
name = "linkup-cli"
version.workspace = true
edition = "2024"
build = "build.rs"

[[bin]]
name = "linkup"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
cloudflare = { workspace = true, features = ["rustls-tls"] }
hex = { workspace = true }
linkup = { workspace = true }
linkup-clients = { workspace = true }
linkup-local-server = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "multipart",
    "blocking",
    "rustls",
    "query",
] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
url = { workspace = true }

clap = { version = "4.6.1", features = ["derive", "cargo"] }
clap_complete = "4.6.5"
colored = "3.1.1"
crossterm = "0.29.0"
ctrlc = { version = "3.5.2", features = ["termination"] }
env_logger = "0.11.10"
flate2 = "1.1.9"
hickory-resolver = { version = "0.26.1", features = ["tokio"] }
indicatif = "0.18.4"
log = "0.4.29"
serde_yaml = "0.9.34-deprecated"
sysinfo = "0.39.2"
tar = "0.4.45"

[dev-dependencies]
mockall = "0.14.0"
mockito = "1.7.2"

[features]
default = []
