[package]
name = "linkup-clients"
version = "0.1.0"
edition = "2024"

[dependencies]
linkup = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
