[package]
name = "linkup"
version.workspace = true
edition = "2024"

[dependencies]
hex = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
unicase = "2.8.1"
url = { workspace = true }
http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
