[package]
name = "linkup-local-server"
version.workspace = true
edition = "2024"

[lib]
name = "linkup_local_server"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true, features = ["http2", "json", "ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
async-trait = { workspace = true }
http = { workspace = true }
hickory-server = { version = "0.25.1", features = ["resolver"] }
hyper = { version = "1.5.2", features = ["server"] }
hyper-rustls = { version = "0.27.5", default-features = false, features = [
    "http2",
    "ring",
] }
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
futures = { workspace = true }
linkup = { workspace = true }
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tower = "0.5.2"
rcgen = { version = "0.14.7", features = ["x509-parser"] }
rustls-pemfile = "2.2.0"
