[package]
name = "linkup-local-server"
version.workspace = true
edition = "2024"

[lib]
name = "linkup_local_server"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true, features = ["http2", "json", "ws"] }
futures = { workspace = true }
http = { workspace = true }
linkup = { workspace = true }
linkup-clients = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }

axum-server = { version = "0.8.0", features = ["tls-rustls"] }
hickory-server = { version = "0.26.0", features = ["resolver"] }
rcgen = { version = "0.14.7", features = ["x509-parser"] }
rustls = { workspace = true }
rustls-pemfile = "2.2.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
