[package]
name = "linkup-server-tests"
version.workspace = true
edition = "2024"

[dev-dependencies]
linkup = { workspace = true }
linkup-local-server = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "rustls"] }
anyhow = { workspace = true }
futures = { workspace = true }
axum = { workspace = true, features = ["ws"] }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
rstest = "0.24.0"
