[package]
name = "linkup-server-tests"
version.workspace = true
edition = "2024"

[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws"] }
futures = { workspace = true }
http = { workspace = true }
linkup = { workspace = true }
linkup-clients = { workspace = true }
linkup-local-server = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "rustls"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-tungstenite = { workspace = true }
url = { workspace = true }

rstest = "0.26.1"
