[package]
name = "linkup-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.7.5", features = ["json"], default-features = false }
console_error_panic_hook = { version = "0.1.7" }
futures = "0.3.31"
getrandom = { version = "0.2.15", features = ["js"] }
http = "1.1.0"
linkup = { path = "../linkup" }
regex = "1.11.0"
tower-service = "0.3.3"
worker = { version = "0.3.0", features = ["http", "axum"] }
