[package]
name = "linkup-worker"
version.workspace = true
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { workspace = true, features = ["json", "query"] }
base64 = { workspace = true }
cloudflare = { workspace = true, features = ["default-tls"] }
futures = { workspace = true }
http = { workspace = true }
linkup = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["default-tls"] }

console_error_panic_hook = { version = "0.1.7" }
getrandom = { version = "0.4.1", features = ["wasm_js"] }
tower-service = "0.3.3"
worker = { version = "0.5.0", features = ["http", "axum"] }
